# AgenticDosNode

./: .env.example  .gitignore  AUTOMATED_INSTALL.md  CLEANUP_README.md  CONFLICT_DETECTION_GUIDE.md  DEPLOYMENT_STATUS.md  LICENSE  README.md  README_COST_OPTIMIZATION.md  SECURITY-DEPLOYMENT.md  SECURITY-README.md  architecture.md  automated-cleanup-procedures.sh  ccproxy-integration.yml  cleanup-oracle1.sh  cleanup-thanos.sh  cleanup-utils.sh  deploy-security.sh  deployment-guide.md  deployment-summary.sh  docker-compose.secure.yml  full-setup.sh  health-check.sh  oracle1-simple.yml  post-cleanup-validator.sh  prepare-agenticdos-node.sh  prepare-environment.sh  prometheus-alerts.yml  pyproject.toml  resource-conflict-detector.sh  security-cleanup-procedures.md  security-hardening-strategy.md  security-rollback.sh  security-verification.sh  service-discovery.yml  tailscale-acls.json  validate-clean-state.sh
ccproxy/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  requirements.txt
ccproxy/config/: modsecurity-ccproxy-rules.conf  nginx-ccproxy.conf  prometheus.yml
ccproxy/security/: seccomp-ccproxy.json
ccproxy/src/: __main__.py  auth.py  models.py  monitoring.py  proxy_config.py  proxy_server.py  rate_limiter.py  transformers.py
ccproxy/tests/: test_proxy.py
demo-app/: README.md  package.json
demo-app/src/: server.js
docs/: cost_optimization_guide.md
examples/: cost_optimization_examples.py  usage_examples.py
langgraph/: Dockerfile  app.py  requirements.txt
n8n/: N8N_SETUP_GUIDE.md  README.md  deploy-n8n.sh  import-workflows.sh
optimization/: README.md  run-optimization.sh
oracle1/: .env.arm64  ARM64_DEPLOYMENT.md  DEBUGGING_REPORT.md  deployment-script.sh  docker-compose-arm64.yml  docker-compose-fixed.yml  docker-compose.yml  start-arm64.sh  verify-arm64.sh
prometheus/: prometheus.yml
scripts/: automated-install.sh  bootstrap-complete.sh  cache_optimizer.py  cost_optimization_suite.py  resource_monitor.py  validate-deployment.sh
security/: security-config.yml
src/: __init__.py  config.py  orchestrator.py  server.py
tailscale/: setup.sh  tailscale-acl.json
thanos/: docker-compose-gpu.yml  docker-compose.yml
(+44 files in other folders)
