[project]
name = "agentic-orchestrator"
version = "0.1.0"
description = "Production-ready multi-model agentic orchestration framework"
authors = [{name = "Agentic Team", email = "team@agentic.ai"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core AI/ML
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # Vector & RAG
    "qdrant-client>=1.12.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",

    # vLLM & Local Models
    "vllm>=0.6.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",

    # Async & Performance
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "asyncio-throttle>=1.0.2",

    # Monitoring & Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.4.0",

    # Utils
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "cachetools>=5.5.0",
    "redis>=5.1.0",
    "tiktoken>=0.7.0",

    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.8.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"